tests/ui/tool-attributes/nested-disallowed.stderr
error[E0539]: malformed `register_tool` attribute input
  --> $DIR/nested-disallowed.rs:2:1
   |
LL | #![register_tool(foo::bar)]
   | ^^^^^^^^^^^^^^^^^--------^^
   | |                |
   | |                expected a valid identifier here
   | help: must be of the form: `#![register_tool(tool1, tool2, ...)]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
